--- a/CSV_Data_Filter/CSV_Data_Filter.csproj
+++ b/CSV_Data_Filter/CSV_Data_Filter.csproj
@@ -16,6 +16,7 @@
     <PublishSingleFile>true</PublishSingleFile>
     <PublishTrimmed>false</PublishTrimmed>
     <PublishReadyToRun>true</PublishReadyToRun>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <DebugType>none</DebugType>
   </PropertyGroup>
 
