--- a/CSV_Data_Filter/CSV_Data_Filter.csproj
+++ b/CSV_Data_Filter/CSV_Data_Filter.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>1.0.0</Version>
+    <Company>您的公司名稱</Company>
+    <Authors>您的姓名</Authors>
+    <Description>CSV資料過濾工具</Description>
+    <Copyright>Copyright © 2024</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='public'">
@@ -18,6 +23,7 @@
     <PublishReadyToRun>true</PublishReadyToRun>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <DebugType>none</DebugType>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
